--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,73 @@
-audiosegment==0.23.0
-click==8.0.3
-Flask==2.0.2
-Flask-Login==0.5.0
-greenlet==1.1.2
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
-numpy==1.21.3
-psycopg2==2.9.2
-pydub==0.25.1
-scipy==1.7.1
-SQLAlchemy==1.4.27
-webrtcvad==2.0.10
-Werkzeug==2.0.2
+absl-py==1.0.0
+appdirs==1.4.4
+astunparse==1.6.3
+audioread==2.1.9
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.2
+colorama==0.4.4
 cycler==0.11.0
-fonttools==4.28.3
-kiwisolver==1.3.2
-matplotlib==3.5.0
-numpy==1.21.4
+decorator==5.1.1
+ffmpeg==1.4
+Flask==2.1.1
+flatbuffers==2.0
+fonttools==4.33.2
+gast==0.5.3
+google-auth==2.6.6
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==1.1.2
+grpcio==1.44.0
+h5py==3.6.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+joblib==1.1.0
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
+libclang==14.0.1
+librosa==0.9.1
+llvmlite==0.38.0
+Markdown==3.3.6
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+numba==0.55.1
+numpy==1.21.6
+oauthlib==3.2.0
+opencv-python==4.5.5.64
+opt-einsum==3.3.0
 packaging==21.3
-Pillow==8.4.0
-pyparsing==3.0.6
+Pillow==9.1.0
+pooch==1.6.0
+protobuf==3.20.1
+psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydub==0.25.1
+pyparsing==3.0.8
 python-dateutil==2.8.2
-setuptools-scm==6.3.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+resampy==0.2.2
+rsa==4.8
+scikit-learn==1.0.2
+scipy==1.8.0
 six==1.16.0
-tomli==1.2.2
-
+SoundFile==0.10.3.post1
+SQLAlchemy==1.4.35
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.25.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
+typing_extensions==4.2.0
+urllib3==1.26.9
+Werkzeug==2.1.1
+wrapt==1.14.0
